Reject http:// TARGET_HOST and preserve subpath targets via URIBuilder
Parse configured target hosts with URIBuilder so base paths like /gitlab are kept,
reject http:// in API requests and health checks, and fix TextDigest warning logs.

Co-authored-by: Cursor <cursoragent@cursor.com>